--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "GlucosioAPI\\": "app/"
         }
     },
     "autoload-dev": {
